Refactor logic with new entity